# cata_libintl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  cata_libintl.cpp  cata_libintl.h
tests/: CMakeLists.txt  cata_libintl_test.cpp
